grammar.bnf
program ::= extern_list decl_list
           | decl_list

#   extern_list ::= extern_list extern
#                |  extern
extern_list ::= extern extern_list_prime
extern_list_prime ::= extern extern_list_prime
                  | epsilon
extern ::= "extern" type_spec IDENT "(" params ")" ";"

# decl_list ::= decl_list decl
#             |  decl
decl_list ::= decl decl_list_prime
decl_list_prime ::= decl decl_list_prime
                  | epsilon

decl ::= var_decl
      |  fun_decl
var_decl ::= var_type IDENT ";"

type_spec ::= "void"
            |  var_type
var_type  ::= "int" |  "float" |  "bool"

fun_decl ::= type_spec IDENT "(" params ")" block
params ::= param_list
      |  "void" | epsilon

# param_list ::= param_list "," param
#             |  param
# param_list ::= param_list param_comma
#              | param
param_comma ::= "," param

param_list ::= param param_list_prime
param_list_prime ::= param_comma param_list_prime
                   | epsilon
param ::= var_type IDENT

block ::= "{" local_decls stmt_list "}"

# local_decls ::= local_decls local_decl
#             |  epsilon
local_decls ::= local_decls_prime
local_decls_prime ::= local_decl local_decls_prime
                    | epsilon


local_decl ::= var_type IDENT ";"

# stmt_list ::= stmt_list stmt
#             |  epsilon
stmt_list ::= stmt_list_prime
stmt_list_prime ::= stmt stmt_list_prime
                | epsilon

stmt ::= expr_stmt
      |  block
      |  if_stmt
      |  while_stmt
      |  return_stmt

expr_stmt ::= expr ";"
            |  ";"
while_stmt ::= "while" "(" expr ")" stmt
if_stmt ::= "if" "(" expr ")" block else_stmt
else_stmt  ::= "else" block
            |  epsilon
return_stmt ::= "return" ";"
            |  "return" expr ";"
# operators in order of increasing precedence
expr ::= IDENT "=" expr
      | rval

# rval ::= rval "||" rval
#       | rval "&&" rval
#       | rval "==" rval
#       | rval "!=" rval
#       | rval "<=" rval
#       | rval "<" rval
#       | rval ">=" rval
#       | rval ">" rval
#       | rval "+" rval
#       | rval "-" rval
#       | rval "*" rval
#       | rval "/" rval
#       | rval "%" rval
#       | "-" rval
#       | "!" rval
#       | "(" expr ")"
#       | IDENT | IDENT "(" args ")"
#       | INT_LIT | FLOAT_LIT | BOOL_LIT


args ::= arg_list
      |  epsilon

# arg_list ::= arg_list "," expr
#       |  expr
arg_list_comma ::= "," expr
# arg_list ::= arg_list arg_list_comma
#             | expr

arg_list ::= expr arg_list_prime
arg_list_prime ::= arg_list_comma arg_list_prime
                | epsilon
